@@ -1,3 +1,8 @@
+Tue Mar  7 12:20:08 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Sleepycat backend now compiles, although undoubtably isn't
+	  going to work properly.
+
 Tue Mar  7 12:17:47 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Added OmRangeError and OmDatabaseError exceptions.
